<resources>
    <string name="app_name">Trinity Locker</string>
    <string name="description_slogan">The ultimate lockscreen that you make!</string>
    <string name="start">Start</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Rationale for asking for the numerous permissions -->
    <string name="permission_rationale">The app needs to be able to access your device in order to function like the system lockscreen and do more (The information will not be shared whatsoever!)</string>
    <string name="service_name">Trinity Locker</string>

    <!-- Into Screen Strings -->
    <string name="loading">Loading...</string>
    <string name="welcomeScreen">Welcome to Trinity Locker!</string>
    <string name="WSdescription_slogan">The ultimate lockscreen that you make!\n</string>
    <string name="signInScreenAccept">By pressing [Sign In], you hereby allow Trinity Locker to access your Google profile and Trinity Locker will proceed to setting up the basic functions of your locker.</string>
    <string name="signInNote">Note: Your profile information will NOT be shared with anyone or any 3rd party, it is mainly for the use of backing up and restoring app settings</string>
    <string name="disableSystemLockIntro">Turn off System Lock\n</string>
    <string name="enableNotifyAccessIntro">Allow Notifications/Accessibility\n</string>
    <string name="setupDoneIntro">You are All Set!</string>

    <!-- Dialog Strings -->
    <string name="warnKeepSystemLockOnTitle">Keep System Lock On?</string>
    <string name="warnKeepSystemLockOn">Are you sure you want to keep the system lock on? Leaving this on will cause the double lockscreen behavior. This behavior is described as having to unlock both the system lockscreen (keyguard) and the app created lockscreen.</string>

    <!--Button Strings-->
    <string name="disableSystemLockBtnTxt">Click here to prevent from unlocking two screens (from both the system lock and app lock)</string>
    <string name="disableSLBTLockDisabled">Lock screen disabled!</string>
    <string name="disableSLBTLockForced">Lock screen will be left on!</string>
    <string name="enableNotifyAccessBtnTxt">Click here to allow the app effectively display notifications and intercept bypasses</string>
    <string name="setupFinishedTxt">Trinity Locker setup successfully completed!</string>

    <!-- Activity Strings -->
    <string name="title_activity_main_screen">Trinity Locker Settings</string>

    <!-- Navigation Strings -->
    <string name="nav_lock_profile_text">Lock Profiles</string>
    <string name="nav_visual_text">Visual</string>
    <string name="nav_notify_text">Notification</string>
    <string name="nav_security_text">Security</string>
    <string name="nav_misc_text">Miscellaneous</string>
    <string name="nav_tips_tricks_text">Tips and Tricks</string>
    <string name="nav_backup_restore_text">Backup/Restore</string>
    <string name="nav_about_text">About Trinity Locker</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Lock Profiles</item>
        <item>Visual</item>
        <item>Notification</item>
        <item>Security</item>
        <item>Miscellaneous</item>
    </string-array>

    <string name="navHeaderSignOut">Sign out</string>
    <string name="debugSignOut">Successfully Signed Out!</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="action_rate">Rate on Google Play</string>
    <string name="action_support">Email Me</string>
    <string name="action_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_settings">MainSettingsActivity</string>

    <string name="action_settings">Settings</string>

    <!-- Prefernces Page Strings -->
    <!--- Lock Profile -->
    <string name="lock_customization_builder_page_button">Screen Builder</string>
    <string name="lock_shortcuts_page_button">Shortcuts</string>
    <string name="smart_unlock_wifi_checkbox">Smart Unlock - Wifi</string>
    <string name="smart_unlock_bluetooth_checkbox">Smart Unlock - Bluetooth</string>
    <string name="smart_unlock_location_checkbox">Smart Unlock - Location</string>

</resources>