<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    tools:context="com.nova.apps.trinitylocker.startup.StartSignInActivity">

    <TextView
        android:text="@string/welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <TextView
        android:text="@string/WSdescription_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textStyle="normal|italic" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@mipmap/ic_app_logo"
            tools:ignore="ContentDescription" />
    </LinearLayout>


    <TextView
        android:text="@string/signInScreenAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_weight="1"
        android:textSize="14sp" />

    <TextView
        android:text="@string/signInNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|italic"
        android:textSize="12sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="top"
        android:gravity="top"
        android:layout_weight="0.5
            "/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    </com.google.android.gms.common.SignInButton>

</LinearLayout>