<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nova.apps.trinitylocker.startup.ChooseSignInActivity">

    <ImageView
            android:layout_width="382dp"
            android:layout_height="216dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/signInLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="ContentDescription" />

    <TextView
            android:text="@string/welcomeScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeTextView"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:textStyle="normal|bold"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signInLogo"
            app:layout_constraintVertical_bias="0.100000024"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button" />

    <TextView
            android:text="@string/description_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sloganTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
            android:layout_marginTop="8dp"
            android:textStyle="normal|italic"
            android:textAllCaps="false"
            android:textSize="18sp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/acceptStartTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sloganTextView"
            android:text="@string/signInScreenAccept"
            app:layout_constraintVertical_bias="0.22000003"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" />

    <TextView
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:id="@+id/disclaimerNoteTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acceptStartTextView"
            app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
            app:layout_constraintVertical_bias="0.050000012"
            android:textSize="12sp"
            android:text="@string/signInNote"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="1.0"
            android:layout_width="0dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
